// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCard.vue should render a card with custom height 1`] = `

<div class="v-card elevation-1"
     style="height: 400px;"
>
</div>

`;

exports[`VCard.vue should render a flat card 1`] = `

<div class="v-card v-card--flat elevation-0">
</div>

`;

exports[`VCard.vue should render a raised card 1`] = `

<div class="v-card v-card--raised elevation-3">
</div>

`;

exports[`VCard.vue should render a tile card 1`] = `

<div class="v-card v-card--tile elevation-1">
</div>

`;

exports[`VCard.vue should render a tile card 2`] = `

<div class="v-card v-card--tile elevation-1">
</div>

`;

exports[`VCard.vue should render card with img 1`] = `

<div class="v-card elevation-1">
</div>

`;

exports[`VCard.vue should render component and match snapshot 1`] = `

<div class="v-card elevation-1">
</div>

`;
